<resources>
    <string name="app_name">Ecommerce App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="profile_welcome">Hi there user!</string>
    <string name="sign_out">Sign Out</string>
    <string name="placeholder">Placeholder</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="not_a_member">Not a member?</string>
    <string name="login">Login</string>
    <string name="hello_username">Hello UserName</string>
    <string name="home">Home</string>
    <string name="cart">Your Cart</string>
    <string name="cloth_cart">ClothCart</string>
    <string name="welcome_msg">Discover the latest trends in fashion</string>
    <string name="profile">Profile</string>
    <string name="cart_image_description">cart image description</string>
    <string name="product_name">Product Name</string>
    <string name="_100">100$</string>
    <string name="product_image_description">product image description</string>
    <string name="favourite_image_description">favourite image description</string>
    <string name="back_arrow_image_description">back arrow image description</string>
    <string name="product_details_image_description">product image description</string>
    <string name="lorem_text_product_details">One occult blessing i give you: acquire each other. One occult blessing i give you: acquire each other. One occult blessing i give you: acquire each other.</string>
    <string name="color">Color</string>
    <string name="your_size">Your Size</string>
    <string name="amount">Amount</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_1">1</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="profile_image_description">profile image description</string>
    <string name="loading">Loading…</string>
    <string name="delete_item_image_description">delete item image description</string>
    <string name="_L">L</string>
    <string name="_1_300_00">1,300.00 $</string>
    <string name="total">Total</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="size_l">Size: L</string>
    <string name="price_piece_100">Price/Piece: 100 $</string>
    <string name="amount_4">Amount: 4</string>
    <string name="_0">0 $</string>
    <string name="background_image">background image</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="empty_shopping_cart_image_description">empty shopping cart image description</string>
</resources>