<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.productdetailsfragment.ProductDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="50dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/back_arrow_image_description"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <ImageView
        android:id="@+id/iv_product_details"
        android:layout_width="0dp"
        android:scaleType="centerCrop"
        android:layout_height="@dimen/_170sdp"
        android:contentDescription="@string/product_details_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_product_details">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/card_background_product_details"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12">

                <RadioButton
                    android:id="@+id/radio_small"
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="@string/s"
                    android:textColor="@drawable/radio_text_color"
                    android:textSize="@dimen/_14ssp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radio_medium"
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="@string/m"
                    android:textColor="@drawable/radio_text_color"
                    android:textSize="@dimen/_14ssp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radio_large"
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="@string/l"
                    android:textColor="@drawable/radio_text_color"
                    android:textSize="@dimen/_14ssp"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_product_name_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="@dimen/_180sdp"
                android:gravity="center"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/product_name"
                android:textColor="@color/blue"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_price_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/_100"
                android:textColor="@color/blue"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_product_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/lorem_text_product_details"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_product_name_details"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_name_details" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/color"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintStart_toStartOf="@+id/tv_product_description"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_description" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/amount"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/your_size"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintStart_toStartOf="@+id/tv_product_description"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_color"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_24sdp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                android:layout_width="@dimen/_29sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:backgroundTint="@color/blue"
                android:gravity="center"
                android:text="@string/_plus"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/roboto_bold"
                app:cornerRadius="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                android:layout_width="@dimen/_29sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:backgroundTint="@color/blue"
                android:gravity="center"
                android:text="@string/_minus"
                android:layout_marginEnd="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/roboto_bold"
                app:cornerRadius="@dimen/_4sdp"
                app:layout_constraintEnd_toStartOf="@+id/tv_amount"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_amount"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_27sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/_1"
                android:textSize="@dimen/_15ssp"
                android:gravity="center"
                android:background="@drawable/amount_tv_background"
                app:layout_constraintBottom_toBottomOf="@+id/btn_plus"
                app:layout_constraintEnd_toStartOf="@+id/btn_plus"
                app:layout_constraintTop_toTopOf="@+id/btn_plus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart"
                android:backgroundTint="@color/blue"
                android:layout_marginStart="@dimen/_64sdp"
                android:layout_marginEnd="@dimen/_64sdp"
                android:textColor="@color/white"
                android:drawableTint="@color/white"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                app:cornerRadius="@dimen/_10sdp"
                android:drawableEnd="@drawable/ic_shopping_cart_nav"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/iv_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_shopping_cart_nav"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cart_image_description" />

</androidx.constraintlayout.widget.ConstraintLayout>